--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "prod": "next build && start",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,7 +14,9 @@
     "@supabase/supabase-js": "^2.45.2",
     "date-fns": "^3.6.0",
     "next": "14.2.6",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18"
   },
   "devDependencies": {
